--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.0.1",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "focus-visible": "^5.2.0",
     "framer-motion": "^2.9.5",
     "next": "10.0.3",
     "react": "17.0.1",
